fixed position (align with menu icons) of the toggle for dark/light mode

--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -77,4 +77,9 @@ a {
   }
 }
 
+@include tablet_min_height {
+  body {
+    margin: 0 5rem;
+  }
+}
 
