--- a/css/components/_toggle.scss
+++ b/css/components/_toggle.scss
@@ -7,8 +7,9 @@
   position: absolute;
   width: 70px;
   height: 35px;
-  margin-left: -10%;
+  margin-left: -35px;
   margin-top: 0.5rem;
+  
 }
 
 /* Hide default HTML checkbox */
